<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_professionals"
            android:icon="@drawable/home"
            android:title="@string/menu_professionals"
            />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/home"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_questionnaire"
            android:icon="@drawable/home"
            android:title="@string/menu_questionnaire" />
        <item
            android:id="@+id/nav_articles"
            android:icon="@drawable/home"
            android:title="@string/menu_articles" />
        <item
            android:id="@+id/nav_prescription"
            android:icon="@drawable/home"
            android:title="@string/menu_prescription" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/home"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/home"
            android:title="@string/menu_setting" />

    </group>
</menu>
